# GoldenDelicious

./: .gitignore  1  Cargo.toml  FUJI_BUG_REPORT.md  GUIDE_DEV.md  README.md  fuji  libfuji  msm_4x-fa83c19356cfae87
.github/workflows/: bench.yml  book.yml  ci.yml  lints-beta.yml  lints-stable.yml
.history/halo2_proofs/benches/: msm_20260718003745.rs  msm_20260718003748.rs  msm_20260718004816.rs  msm_20260718004832.rs
dev/bench/: data.js
halo2/: CHANGELOG.md  Cargo.toml
halo2_gadgets/: CHANGELOG.md  Cargo.toml
halo2_gadgets/benches/: poseidon.rs  primitives.rs  sha256.rs
halo2_gadgets/src/: ecc.rs  poseidon.rs  sinsemilla.rs  utilities.rs
halo2_gadgets/src/ecc/: chip.rs
halo2_gadgets/src/ecc/chip/: add.rs  constants.rs  mul.rs  mul_fixed.rs
halo2_gadgets/src/ecc/chip/mul/: complete.rs  incomplete.rs  overflow.rs
halo2_gadgets/src/ecc/chip/mul_fixed/: base_field_elem.rs  full_width.rs  short.rs
halo2_gadgets/src/poseidon/: pow5.rs
halo2_gadgets/src/sha256/: table16.rs
halo2_gadgets/src/sha256/table16/: compression.rs  gates.rs  message_schedule.rs  spread_table.rs  util.rs
halo2_gadgets/src/sha256/table16/compression/: compression_gates.rs  compression_util.rs  subregion_digest.rs  subregion_initial.rs  subregion_main.rs
halo2_gadgets/src/sha256/table16/message_schedule/: schedule_util.rs  subregion1.rs  subregion2.rs  subregion3.rs
halo2_gadgets/src/sinsemilla/: chip.rs  merkle.rs  message.rs
halo2_gadgets/src/sinsemilla/chip/: hash_to_point.rs
halo2_gadgets/src/sinsemilla/merkle/: chip.rs
halo2_gadgets/src/test_circuits/circuit_data/: vk_ecc_chip_fixed.rdata
halo2_gadgets/src/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs
halo2_poseidon/: CHANGELOG.md  Cargo.toml
halo2_poseidon/src/: grain.rs  lib.rs  mds.rs  p128pow5t3.rs  test_vectors.rs
halo2_proofs/: CHANGELOG.md  Cargo.toml
halo2_proofs/benches/: arithmetic.rs  dev_lookup.rs  hashtocurve.rs  msm.rs  msm_4x.rs  msm_debug.rs  plonk.rs
halo2_proofs/examples/: circuit-layout.rs  cost-model.rs
halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  helpers.rs  lib.rs  multicore.rs  poly.rs  transcript.rs
halo2_proofs/src/arithmetic/: fuji.rs
halo2_proofs/src/circuit/: floor_planner.rs  layouter.rs  table_layouter.rs  value.rs
halo2_proofs/src/circuit/floor_planner/: single_pass.rs  v1.rs
halo2_proofs/src/circuit/floor_planner/v1/: strategy.rs
halo2_proofs/src/dev/: cost.rs  failure.rs  gates.rs  graph.rs  tfp.rs  util.rs
halo2_proofs/src/dev/failure/: emitter.rs
halo2_proofs/src/dev/graph/: layout.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  error.rs  keygen.rs  lookup.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/circuit/: compress_selectors.rs
halo2_proofs/src/plonk/lookup/: prover.rs  verifier.rs
halo2_proofs/src/plonk/permutation/: keygen.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/vanishing/: prover.rs  verifier.rs
halo2_proofs/src/plonk/verifier/: batch.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  evaluator.rs  multiopen.rs
halo2_proofs/src/poly/commitment/: msm.rs  prover.rs  verifier.rs
halo2_proofs/src/poly/multiopen/: prover.rs  verifier.rs
halo2_proofs/tests/: plonk_api.rs
