[workspace]
members = [
    "halo2",
    "halo2_gadgets",
    "halo2_poseidon",
    "halo2_proofs",
]

resolver = "2"

# Shared package metadata, so the edition and the MSRV cannot drift between crates.
[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
categories = ["cryptography"]

# Lints that should hold for every target in every crate (lib, tests, benches,
# examples). Lints that only concern a crate's public API (`missing_docs`,
# `missing_debug_implementations`) stay as crate attributes in its `lib.rs`.
[workspace.lints.rust]
# `docsrs` is set by docs.rs and by the intra-doc-links CI job; any other cfg
# reaching the compiler is a typo.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
unsafe_code = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
# Debugging and placeholder constructs have no place in a published crate.
#
# `print_stdout` and `print_stderr` are NOT denied: printing is the job of the
# `halo2_proofs::dev` module, whose MockProver renders human-readable circuit
# failure diagnostics to stderr, and of the examples.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
# Readability and correctness lints beyond `clippy::all`, all of which this
# workspace already satisfies; they are enabled to keep it that way.
#
# `needless_pass_by_value` and `unused_qualifications` are deliberately NOT here.
# The former would require changing public signatures to take references; the
# latter is per-feature-config, so a fix that is right under `--all-features` can
# fail to compile without them.
cast_lossless = "warn"
checked_conversions = "warn"
explicit_iter_loop = "warn"
manual_assert = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
