[workspace]
members = [
    "halo2",
    "halo2_gadgets",
    "halo2_poseidon",
    "halo2_proofs",
]

# Pinned to the resolver this workspace has always used, rather than the one the
# edition implies. Resolver 2 stops unifying features across normal and dev/build
# dependencies, and this workspace relies on that unification: without it,
# `rand_core/getrandom` is no longer enabled for the dev targets (so `OsRng` loses its
# `RngCore` impl) and `getrandom/js` is no longer enabled for wasm32-unknown-unknown
# (so that target stops building). Migrating to resolver 2 means declaring those
# features explicitly, which is a dependency change rather than a toolchain one; it is
# left for its own PR.
resolver = "1"

# Shared package metadata, so the edition and the MSRV cannot drift between crates.
[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
categories = ["cryptography"]

# Lints that should hold for every target in every crate (lib, tests, benches,
# examples). Lints that only concern a crate's public API (`missing_docs`,
# `missing_debug_implementations`) stay as crate attributes in its `lib.rs`.
[workspace.lints.rust]
# `docsrs` is set by docs.rs and by the intra-doc-links CI job; any other cfg
# reaching the compiler is a typo.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
unsafe_code = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
# Debugging and placeholder constructs have no place in a published crate.
#
# `print_stdout` and `print_stderr` are NOT denied: printing is the job of the
# `halo2_proofs::dev` module, whose MockProver renders human-readable circuit
# failure diagnostics to stderr, and of the examples.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
# Readability and correctness lints beyond `clippy::all`, all of which this
# workspace already satisfies; they are enabled to keep it that way.
#
# `needless_pass_by_value` and `unused_qualifications` are deliberately NOT here.
# The former would require changing public signatures to take references; the
# latter is per-feature-config, so a fix that is right under `--all-features` can
# fail to compile without them.
cast_lossless = "warn"
checked_conversions = "warn"
explicit_iter_loop = "warn"
manual_assert = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
