[package]
name = "halo2"
version = "0.1.0-beta.2"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
]
edition.workspace = true
rust-version.workspace = true
description = "[BETA] Fast zero-knowledge proof-carrying data implementation with no trusted setup"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/halo2"
readme = "../README.md"
categories.workspace = true
keywords = ["halo", "proofs", "recursive", "zkp", "zkSNARKs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
halo2_proofs = { version = "0.3", path = "../halo2_proofs", default-features = false }

[lib]
bench = false

