[package]
name = "halo2_poseidon"
version = "0.1.0"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Daira Emma Hopwood <daira@jacaranda.org>",
    "Ying Tong Lai",
]
edition.workspace = true
rust-version.workspace = true
description = "The Poseidon algebraic hash function for Halo 2"
license.workspace = true
repository.workspace = true
readme = "README.md"
categories.workspace = true

[dependencies]
bitvec = { version = "1", default-features = false }
ff = { version = "0.13", default-features = false }
group = "0.13"
pasta_curves = "0.5"

[features]
test-dependencies = []

